tests/ui/share-trait/share-trait-not-in-prelude.stderr
error[E0405]: cannot find trait `Share` in this scope
  --> $DIR/share-trait-not-in-prelude.rs:6:6
   |
LL | impl Share for Alias {}
   |      ^^^^^ not found in this scope
   |
help: consider importing this trait
   |
LL + use std::clone::Share;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
